...
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:text="55"
                    android:textSize="30sp"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/editButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_baseline_edit_24" />
            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
...
